@startuml

title __SPRING-BOOT-ECOMMERCE's Class Diagram__\n

  namespace com.kbak.ecommerce {
    class com.kbak.ecommerce.SpringBootEcommerceApplication {
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace config {
      class com.kbak.ecommerce.config.MyDataRestConfig {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace controller {
      class com.kbak.ecommerce.controller.CheckoutController {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace dao {
      interface com.kbak.ecommerce.dao.CountryRepository {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace dao {
      interface com.kbak.ecommerce.dao.CustomerRepository {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace dao {
      interface com.kbak.ecommerce.dao.ProductCategoryRepository {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace dao {
      interface com.kbak.ecommerce.dao.ProductRepository {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace dao {
      interface com.kbak.ecommerce.dao.StateRepository {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace dto {
      class com.kbak.ecommerce.dto.Purchase {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace dto {
      class com.kbak.ecommerce.dto.PurchaseResponse {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.Address {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.Country {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.Customer {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.Order {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.OrderItem {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.Product {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.ProductCategory {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace entity {
      class com.kbak.ecommerce.entity.State {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace service {
      interface com.kbak.ecommerce.service.CheckoutService {
      }
    }
  }
  

  namespace com.kbak.ecommerce {
    namespace service {
      class com.kbak.ecommerce.service.CheckoutServiceImpl {
      }
    }
  }
  

  com.kbak.ecommerce.config.MyDataRestConfig .up.|> org.springframework.data.rest.webmvc.config.RepositoryRestConfigurer
  com.kbak.ecommerce.controller.CheckoutController o-- com.kbak.ecommerce.service.CheckoutService : checkoutService
  com.kbak.ecommerce.dto.Purchase o-- com.kbak.ecommerce.entity.Address : billingAddress
  com.kbak.ecommerce.dto.Purchase o-- com.kbak.ecommerce.entity.Customer : customer
  com.kbak.ecommerce.dto.Purchase o-- com.kbak.ecommerce.entity.Order : order
  com.kbak.ecommerce.dto.Purchase o-- com.kbak.ecommerce.entity.Address : shippingAddress
  com.kbak.ecommerce.entity.Address o-- com.kbak.ecommerce.entity.Order : order
  com.kbak.ecommerce.entity.Order o-- com.kbak.ecommerce.entity.Address : billingAddress
  com.kbak.ecommerce.entity.Order o-- com.kbak.ecommerce.entity.Customer : customer
  com.kbak.ecommerce.entity.Order o-- com.kbak.ecommerce.entity.Address : shippingAddress
  com.kbak.ecommerce.entity.OrderItem o-- com.kbak.ecommerce.entity.Order : order
  com.kbak.ecommerce.entity.Product o-- com.kbak.ecommerce.entity.ProductCategory : category
  com.kbak.ecommerce.entity.State o-- com.kbak.ecommerce.entity.Country : country
  com.kbak.ecommerce.service.CheckoutServiceImpl .up.|> com.kbak.ecommerce.service.CheckoutService
  com.kbak.ecommerce.service.CheckoutServiceImpl o-- com.kbak.ecommerce.dao.CustomerRepository : customerRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
